# Copyright 2025 The zk_dtypes Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.
# ==============================================================================

""" Main zk_dtypes library. """

load("@rules_cc//cc:defs.bzl", "cc_library", "cc_test")
load("@rules_python//python:defs.bzl", "py_library", "py_test")
load(":py_extension.bzl", "py_extension")

package(
    default_visibility = ["//visibility:public"],
    licenses = ["notice"],
)

cc_library(
    name = "all_types",
    hdrs = ["include/all_types.h"],
    deps = [
        ":babybear",
        ":babybearx4",
        ":binary_field",
        ":bn254_fq",
        ":bn254_fqx2",
        ":bn254_fr",
        ":bn254_g1",
        ":bn254_g2",
        ":goldilocks",
        ":goldilocksx3",
        ":koalabear",
        ":koalabearx4",
        ":mersenne31",
        ":mersenne31x2",
        ":mersenne31x2x2",
    ],
)

cc_library(
    name = "always_false",
    hdrs = ["include/always_false.h"],
)

cc_library(
    name = "arithmetics",
    hdrs = ["include/arithmetics.h"],
)

cc_library(
    name = "batch_inverse",
    hdrs = ["include/batch_inverse.h"],
    deps = [
        ":template_util",
        "@com_google_absl//absl/base:core_headers",
        "@com_google_absl//absl/status",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "big_int",
    srcs = ["_src/big_int.cc"],
    hdrs = ["include/big_int.h"],
    deps = [
        ":arithmetics",
        ":bit_traits_forward",
        ":random",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/numeric:int128",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "bit_iterator",
    hdrs = ["include/bit_iterator.h"],
    deps = [
        ":bit_traits_forward",
        "@com_google_absl//absl/base:endian",
    ],
)

cc_library(
    name = "bit_traits_forward",
    hdrs = ["include/bit_traits_forward.h"],
)

cc_library(
    name = "bits",
    hdrs = ["include/bits.h"],
    deps = ["@com_google_absl//absl/numeric:bits"],
)

cc_library(
    name = "byinverter",
    hdrs = ["include/byinverter.h"],
    deps = [
        ":big_int",
        "@com_google_absl//absl/numeric:bits",
        "@com_google_absl//absl/numeric:int128",
    ],
)

cc_library(
    name = "comparable_traits",
    hdrs = ["include/comparable_traits.h"],
)

cc_library(
    name = "control_flow_operation",
    hdrs = ["include/control_flow_operation.h"],
    deps = [":control_flow_operation_forward"],
)

cc_library(
    name = "control_flow_operation_forward",
    hdrs = ["include/control_flow_operation_forward.h"],
)

cc_library(
    name = "intn",
    hdrs = ["include/intn.h"],
)

cc_library(
    name = "pow",
    hdrs = ["include/pow.h"],
    deps = [
        ":big_int",
        ":bit_iterator",
    ],
)

cc_library(
    name = "random",
    srcs = ["_src/random.cc"],
    hdrs = ["include/random.h"],
    deps = ["@com_google_absl//absl/random"],
)

cc_library(
    name = "scalar_mul",
    hdrs = ["include/scalar_mul.h"],
    deps = [
        ":big_int",
        ":bit_iterator",
    ],
)

cc_library(
    name = "str_join",
    hdrs = ["include/str_join.h"],
)

cc_library(
    name = "template_util",
    hdrs = ["include/template_util.h"],
)

cc_test(
    name = "base_unittests",
    srcs = [
        "tests/batch_inverse_unittest.cc",
        "tests/big_int_unittest.cc",
        "tests/bit_iterator_unittest.cc",
        "tests/byinverter_unittest.cc",
        "tests/intn_unittest.cc",
    ],
    deps = [
        ":batch_inverse",
        ":big_int",
        ":bit_iterator",
        ":byinverter",
        ":intn",
        ":sw_test_curve_config",
        "@com_google_absl//absl/container:inlined_vector",
        "@com_google_absl//absl/status:status_matchers",
        "@com_google_absl//absl/strings",
        "@com_google_absl//absl/types:span",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        "@eigen_archive//:eigen3",
    ],
)

#########
# Field #
#########

cc_library(
    name = "babybear",
    hdrs = ["include/field/babybear/babybear.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "babybearx4",
    hdrs = ["include/field/babybear/babybearx4.h"],
    deps = [
        ":babybear",
        ":extension_field",
    ],
)

cc_library(
    name = "barrett_multiplication",
    hdrs = ["include/field/barrett_multiplication.h"],
    deps = [
        ":arithmetics",
        ":big_int",
    ],
)

cc_library(
    name = "big_binary_field",
    hdrs = ["include/field/big_binary_field.h"],
    deps = [
        ":big_int",
        ":binary_field_config",
        ":binary_field_multiplication",
        ":finite_field",
        ":pow",
        ":random",
    ],
)

cc_library(
    name = "big_prime_field",
    hdrs = ["include/field/big_prime_field.h"],
    deps = [
        ":big_int",
        ":byinverter",
        ":finite_field",
        ":intn",
        ":modular_operations",
        ":mont_multiplication",
        ":pow",
        ":prime_field",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_googletest//:gtest_prod",
    ],
)

cc_library(
    name = "binary_field",
    hdrs = ["include/field/binary_field.h"],
    deps = [
        ":big_binary_field",
        ":comparable_traits",
        ":small_binary_field",
    ],
)

cc_library(
    name = "binary_field_config",
    hdrs = ["include/field/binary_field_config.h"],
)

cc_library(
    name = "binary_field_multiplication",
    hdrs = ["include/field/binary_field_multiplication.h"],
    deps = [":big_int"],
)

cc_library(
    name = "extension_field",
    hdrs = ["include/field/extension_field.h"],
    deps = [
        ":always_false",
        ":comparable_traits",
        ":extension_field_operations",
        ":finite_field",
        ":frobenius_coeffs",
        ":pow",
        ":str_join",
        "@com_google_absl//absl/base",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/types:span",
    ],
)

cc_library(
    name = "frobenius_coeffs",
    hdrs = ["include/field/frobenius_coeffs.h"],
    deps = [
        ":big_int",
        ":pow",
    ],
)

cc_library(
    name = "extension_field_operations",
    hdrs = [
        "include/field/cubic_extension_field_operation.h",
        "include/field/extension_field_operation.h",
        "include/field/quadratic_extension_field_operation.h",
        "include/field/quartic_extension_field_operation.h",
    ],
    deps = [
        ":extension_field_operation_traits_forward",
        ":frobenius_operation",
        ":karatsuba_operation",
        ":toom_cook_operation",
        ":vandermonde_matrix",
    ],
)

cc_library(
    name = "vandermonde_matrix",
    hdrs = ["include/field/vandermonde_matrix.h"],
)

cc_library(
    name = "extension_field_operation_traits_forward",
    hdrs = ["include/field/extension_field_operation_traits_forward.h"],
)

cc_library(
    name = "field",
    hdrs = ["include/field/field.h"],
    deps = [":group"],
)

cc_library(
    name = "finite_field",
    hdrs = ["include/field/finite_field.h"],
    deps = [
        ":always_false",
        ":field",
        ":finite_field_traits",
        ":square_root_algorithms",
    ],
)

cc_library(
    name = "finite_field_traits",
    hdrs = ["include/field/finite_field_traits.h"],
)

cc_library(
    name = "frobenius_operation",
    hdrs = ["include/field/frobenius_operation.h"],
    deps = [":extension_field_operation_traits_forward"],
)

cc_library(
    name = "goldilocks",
    hdrs = ["include/field/goldilocks/goldilocks.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "goldilocksx3",
    hdrs = ["include/field/goldilocks/goldilocksx3.h"],
    deps = [
        ":extension_field",
        ":goldilocks",
    ],
)

cc_library(
    name = "goldilocks_multiplication",
    hdrs = ["include/field/goldilocks_multiplication.h"],
    deps = [":arithmetics"],
)

cc_library(
    name = "mersenne_multiplication",
    hdrs = ["include/field/mersenne_multiplication.h"],
    deps = [
        ":arithmetics",
        ":bits",
        ":modular_operations",
    ],
)

cc_library(
    name = "mersenne31",
    hdrs = ["include/field/mersenne31/mersenne31.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "mersenne31x2",
    hdrs = ["include/field/mersenne31/mersenne31x2.h"],
    deps = [
        ":extension_field",
        ":mersenne31",
    ],
)

cc_library(
    name = "mersenne31x2x2",
    hdrs = ["include/field/mersenne31/mersenne31x2x2.h"],
    deps = [
        ":extension_field",
        ":mersenne31x2",
    ],
)

cc_library(
    name = "modular_operations",
    hdrs = ["include/field/modular_operations.h"],
    deps = [
        ":arithmetics",
        ":big_int",
    ],
)

cc_library(
    name = "mont_multiplication",
    hdrs = ["include/field/mont_multiplication.h"],
    deps = [
        ":arithmetics",
        ":big_int",
        ":modular_operations",
    ],
)

cc_library(
    name = "karatsuba_operation",
    hdrs = ["include/field/karatsuba_operation.h"],
    deps = [":extension_field_operation_traits_forward"],
)

cc_library(
    name = "koalabear",
    hdrs = ["include/field/koalabear/koalabear.h"],
    deps = [":small_prime_field"],
)

cc_library(
    name = "koalabearx4",
    hdrs = ["include/field/koalabear/koalabearx4.h"],
    deps = [
        ":extension_field",
        ":koalabear",
    ],
)

cc_library(
    name = "prime_field",
    hdrs = ["include/field/prime_field.h"],
    deps = [
        ":comparable_traits",
        ":finite_field_traits",
    ],
)

cc_library(
    name = "root_of_unity",
    hdrs = ["include/field/root_of_unity.h"],
    deps = [
        ":bits",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "small_binary_field",
    hdrs = ["include/field/small_binary_field.h"],
    deps = [
        ":big_int",
        ":binary_field_config",
        ":binary_field_multiplication",
        ":finite_field",
        ":pow",
        ":random",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "small_prime_field",
    hdrs = ["include/field/small_prime_field.h"],
    deps = [
        ":barrett_multiplication",
        ":big_int",
        ":byinverter",
        ":finite_field",
        ":goldilocks_multiplication",
        ":intn",
        ":mersenne_multiplication",
        ":modular_operations",
        ":mont_multiplication",
        ":pow",
        ":prime_field",
        ":random",
        "@com_google_absl//absl/log:check",
        "@com_google_absl//absl/status:statusor",
        "@com_google_absl//absl/strings",
        "@com_google_googletest//:gtest_prod",
    ],
)

cc_library(
    name = "square_root_algorithms",
    hdrs = [
        "include/field/square_root_algorithms/shanks.h",
        "include/field/square_root_algorithms/square_root_algorithm9.h",
        "include/field/square_root_algorithms/tonelli_shanks.h",
    ],
    deps = [
        ":finite_field_traits",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "toom_cook_operation",
    hdrs = ["include/field/toom_cook_operation.h"],
    deps = [":extension_field_operation_traits_forward"],
)

cc_test(
    name = "field_mul_benchmark",
    srcs = ["include/field/mul_benchmark.cc"],
    tags = ["benchmark"],
    deps = [
        ":babybear",
        ":goldilocks",
        ":mersenne31",
        "@com_google_benchmark//:benchmark_main",
    ],
)

cc_test(
    name = "field_unittests",
    srcs = [
        "tests/field/binary_field_unittest.cc",
        "tests/field/extension_field_unittest.cc",
        "tests/field/prime_field_unittest.cc",
        "tests/field/root_of_unity_unittest.cc",
        "tests/field/square_root_algorithms_unittest.cc",
    ],
    deps = [
        ":all_types",
        # TODO(chokobole33): Remove this.
        ":mersenne31x2x2",
        ":random",
        ":root_of_unity",
        ":sw_test_curve_config",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
        ":big_binary_field",
        ":binary_field",
        ":prime_field",
        ":small_binary_field",
    ],
)

############
# Geometry #
############

cc_library(
    name = "curve_type",
    hdrs = ["include/geometry/curve_type.h"],
)

cc_library(
    name = "point_declarations",
    hdrs = ["include/geometry/point_declarations.h"],
    deps = [
        ":comparable_traits",
        ":group",
    ],
)

#########
# Group #
#########

cc_library(
    name = "group",
    hdrs = ["include/group/group.h"],
)

##########
# Circle #
##########

cc_library(
    name = "circle_point",
    hdrs = ["include/circle/circle_point.h"],
    deps = [
        ":group",
        ":str_join",
    ],
)

cc_library(
    name = "circle_point_index",
    hdrs = ["include/circle/circle_point_index.h"],
)

cc_library(
    name = "m31_circle",
    hdrs = ["include/circle/m31_circle.h"],
    deps = [
        ":circle_point",
        ":circle_point_index",
        ":mersenne31",
    ],
)

cc_library(
    name = "coset",
    hdrs = ["include/circle/coset.h"],
    deps = [
        ":circle_point",
        ":circle_point_index",
        ":m31_circle",
        ":mersenne31",
    ],
)

cc_library(
    name = "circle_domain",
    hdrs = ["include/circle/circle_domain.h"],
    deps = [
        ":circle_point",
        ":circle_point_index",
        ":coset",
        ":m31_circle",
        ":mersenne31",
    ],
)

cc_library(
    name = "circle_fft",
    hdrs = ["include/circle/fft.h"],
    deps = [":mersenne31"],
)

cc_test(
    name = "circle_unittests",
    srcs = [
        "tests/circle/circle_domain_unittest.cc",
        "tests/circle/circle_point_unittest.cc",
        "tests/circle/coset_unittest.cc",
    ],
    deps = [
        ":circle_domain",
        ":circle_fft",
        ":circle_point",
        ":circle_point_index",
        ":coset",
        ":m31_circle",
        ":mersenne31",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

cc_library(
    name = "point_traits",
    hdrs = ["include/geometry/point_traits.h"],
    deps = [
        ":curve_type",
        ":point_declarations",
    ],
)

##################
# Elliptic Curve #
##################

cc_library(
    name = "bn254_fq",
    hdrs = ["include/elliptic_curve/bn/bn254/fq.h"],
    deps = [":big_prime_field"],
)

cc_library(
    name = "bn254_fqx2",
    hdrs = ["include/elliptic_curve/bn/bn254/fqx2.h"],
    deps = [
        ":bn254_fq",
        ":extension_field",
    ],
)

cc_library(
    name = "bn254_fr",
    hdrs = ["include/elliptic_curve/bn/bn254/fr.h"],
    deps = [":big_prime_field"],
)

cc_library(
    name = "bn254_curve",
    hdrs = ["include/elliptic_curve/bn/bn254/curve.h"],
    deps = [
        ":bn254_g1",
        ":bn254_g2",
    ],
)

cc_library(
    name = "bn254_g1",
    hdrs = ["include/elliptic_curve/bn/bn254/g1.h"],
    deps = [
        ":bn254_fq",
        ":bn254_fr",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_library(
    name = "bn254_g2",
    hdrs = ["include/elliptic_curve/bn/bn254/g2.h"],
    deps = [
        ":bn254_fqx2",
        ":bn254_fr",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_library(
    name = "sw_affine_point",
    hdrs = ["include/elliptic_curve/short_weierstrass/affine_point.h"],
    deps = [
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_affine_point_operation",
        ":sw_curve",
        ":sw_point_base",
    ],
)

cc_library(
    name = "sw_affine_point_operation",
    hdrs = ["include/elliptic_curve/short_weierstrass/affine_point_operation.h"],
    deps = [
        ":curve_type",
        ":point_traits",
    ],
)

cc_library(
    name = "sw_curve",
    hdrs = ["include/elliptic_curve/short_weierstrass/sw_curve.h"],
    deps = [
        ":curve_type",
        ":point_declarations",
        "@com_google_absl//absl/status:statusor",
    ],
)

cc_library(
    name = "sw_jacobian_point",
    hdrs = ["include/elliptic_curve/short_weierstrass/jacobian_point.h"],
    deps = [
        ":batch_inverse",
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_curve",
        ":sw_jacobian_point_operation",
        ":sw_point_base",
        ":template_util",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sw_jacobian_point_operation",
    hdrs = ["include/elliptic_curve/short_weierstrass/jacobian_point_operation.h"],
    deps = [
        ":curve_type",
        ":point_traits",
    ],
)

cc_library(
    name = "sw_point_base",
    hdrs = ["include/elliptic_curve/short_weierstrass/point_base.h"],
    deps = [
        ":control_flow_operation",
        ":point_traits",
        ":str_join",
    ],
)

cc_library(
    name = "sw_point_xyzz",
    hdrs = ["include/elliptic_curve/short_weierstrass/point_xyzz.h"],
    deps = [
        ":batch_inverse",
        ":curve_type",
        ":point_declarations",
        ":scalar_mul",
        ":sw_curve",
        ":sw_point_base",
        ":sw_point_xyzz_operation",
        ":template_util",
        "@com_google_absl//absl/strings",
    ],
)

cc_library(
    name = "sw_point_xyzz_operation",
    hdrs = ["include/elliptic_curve/short_weierstrass/point_xyzz_operation.h"],
    deps = [
        ":curve_type",
        ":point_traits",
    ],
)

cc_library(
    name = "sw_test_curve_config",
    hdrs = ["include/elliptic_curve/short_weierstrass/test/sw_curve_config.h"],
    deps = [
        ":extension_field",
        ":small_prime_field",
        ":sw_affine_point",
        ":sw_curve",
        ":sw_jacobian_point",
        ":sw_point_xyzz",
    ],
)

cc_test(
    name = "elliptic_curve_unittests",
    srcs = [
        "tests/elliptic_curve/affine_point_unittest.cc",
        "tests/elliptic_curve/jacobian_point_unittest.cc",
        "tests/elliptic_curve/point_xyzz_unittest.cc",
    ],
    deps = [
        ":sw_test_curve_config",
        "@com_google_googletest//:gtest",
        "@com_google_googletest//:gtest_main",
    ],
)

##########
# Python #
##########

cc_library(
    name = "_zk_dtypes_ext_cc",
    srcs = [
        "_src/common.h",
        "_src/dtypes.cc",
        "_src/ec_point_numpy.h",
        "_src/field_numpy.h",
        "_src/int_caster.cc",
        "_src/int_caster.h",
        "_src/intn_numpy.h",
        "_src/numpy.cc",
        "_src/numpy.h",
        "_src/ufuncs.h",
    ],
    deps = [
        ":all_types",
        ":intn",
        "//third_party/py/numpy:headers",
        "@com_google_absl//absl/log",
        "@com_google_absl//absl/types:span",
        "@eigen_archive//:eigen3",
        "@rules_python//python/cc:current_py_cc_headers",
    ],
    alwayslink = True,
)

py_extension(
    name = "_zk_dtypes_ext",
    copts = select({
        "@rules_cc//cc/compiler:msvc-cl": [],
        "//conditions:default": ["-fvisibility=hidden"],
    }),
    deps = [":_zk_dtypes_ext_cc"],
)

py_library(
    name = "zk_dtypes_py",
    srcs = [
        "__init__.py",
        "_iinfo.py",
        "_pfinfo.py",
    ],
    data = [":_zk_dtypes_ext"],
)

py_library(
    name = "test_utils",
    testonly = True,
    srcs = [
        "tests/conftest.py",
        "tests/multi_thread_utils.py",
    ],
    imports = ["tests"],
)

py_test(
    name = "binary_field_test",
    srcs = ["tests/binary_field_test.py"],
    main = "tests/binary_field_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "ec_point_test",
    srcs = ["tests/ec_point_test.py"],
    main = "tests/ec_point_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "extension_field_test",
    srcs = ["tests/extension_field_test.py"],
    main = "tests/extension_field_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "iinfo_test",
    srcs = ["tests/iinfo_test.py"],
    main = "tests/iinfo_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "intn_test",
    srcs = ["tests/intn_test.py"],
    main = "tests/intn_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)

py_test(
    name = "prime_field_test",
    srcs = ["tests/prime_field_test.py"],
    main = "tests/prime_field_test.py",
    deps = [
        ":test_utils",
        ":zk_dtypes_py",
        "@pypi//absl_py",
        "@pypi//numpy",
    ],
)
